--- a/config/database.yml
+++ b/config/database.yml
@@ -64,7 +64,7 @@ test:
   password: app_user@123
 
 # As with config/secrets.yml, you never want to store sensitive information,
-# like your database password, in your source code. If your source code is
+# like your database mpassword, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
 #
 # Instead, provide the password as a unix environment variable when you boot
